
TODO:

    - Fix code indenting in PHP 4 code
    - Port maxDepth option to PHP 4 code

2010-10-09 - Release Version: 0.3.2rc5

    - (Issue 153) FirePHP incorrectly double-encodes UTF8 when mbstring.func_overload is enabled

2010-10-08 - Release Version: 0.3.2rc4

    - Trigger upgrade message if part of FirePHP 1.0
    - Removed FirePHP/Init.php inclusion logic and only load FirePHP.class.php if not already loaded

2010-07-19 - Release Version: 0.3.2rc3

    - Fixed FirePHP/Init.php inclusion logic

2010-07-19 - Release Version: 0.3.2rc2

    - (Issue 145) maxDepth option
    - Changed maxObjectDepth and maxArrayDepth option defaults to 5
    - Fixed code indentation

2010-03-05 - Release Version: 0.3.2rc1

    - (Issue 114) Allow options to be passed on to basic logging wrappers
    - (Issue 122) Filter objectStack property of FirePHP class
    - (Issue 123) registerErrorHandler(false) by default
    - Added setOption() and getOption() methods
    - (Issue 117) dump() method argument validation
    - Started adding PHPUnit tests
    - Some refactoring to support unit testing
    - Deprecated setProcessorUrl() and setRendererUrl()
    - Check User-Agent and X-FirePHP-Version header to detect FirePHP on client
    - (Issue 135) FirePHP 0.4.3 with Firebug 1.5 changes user agent on the fly
    - (Issue 112) Error Predefined Constants Not available for PHP 5.x versions

2008-06-14 - Release Version: 0.3.1

    - (Issue 108) ignore class name case in object filter

2009-05-11 - Release Version: 0.3
2009-05-01 - Release Version: 0.3.rc.1

    - (Issue 90) PHP4 compatible version of FirePHPCore
    - (Issue 98) Thrown exceptions don't send an HTTP 500 if the FirePHP exception handler is enabled
    - (Issue 85) Support associative arrays in encodeTable method in FirePHP.class.php
    - (Issue 66) Add a new getOptions() public method in API
    - (Issue 82) Define $this->options outside of __construct
    - (Issue 72) Message error if group name is null