@@ -1129,17 +1129,38 @@ class FirePHP {
     }
 
     /**
+     * Get all request headers
+     * 
+     * @return array
+     */
+    public static function getAllRequestHeaders() {
+        static $_cached_headers = false;
+        if($_cached_headers!==false) {
+            return $_cached_headers;
+        }
+        $headers = array();
+        if(function_exists('getallheaders')) {
+            foreach( getallheaders() as $name => $value ) {
+                $headers[strtolower($name)] = $value;
+            }
+        } else {
+            foreach($_SERVER as $name => $value) {
+                if(substr($name, 0, 5) == 'HTTP_') {
+                    $headers[strtolower(str_replace(' ', '-', str_replace('_', ' ', substr($name, 5))))] = $value;
+                }
+            }
+        }
+        return $_cached_headers = $headers;
+    }
+
+    /**
      * Get a request header
      *
      * @return string|false
      */
     protected function getRequestHeader($Name)
     {
-        $headers = getallheaders();
-        if (isset($headers[$Name])) {
-            return $headers[$Name];
-        } else
-        // just in case headers got lower-cased in transport
+        $headers = self::getAllRequestHeaders();
         if (isset($headers[strtolower($Name)])) {
             return $headers[strtolower($Name)];
         }
