@@ -1,0 +1,11 @@
+<?php
+
+// NOTE: You must have FirePHP Companion installed (http://www.christophdorn.com/Tools/)
+
+// See the Firebug Console for result
+
+require_once('FirePHPCore/fb.php4');
+
+fb('Hello World');
+
+FB::info('Hello World');
