@@ -4,6 +4,10 @@ TODO:
     - Fix code indenting in PHP 4 code
     - Port maxDepth option to PHP 4 code
 
+DONE:
+
+    - (Issue 154) getRequestHeader uses "getallheaders" even though it doesn't always exist.
+
 2010-10-09 - Release Version: 0.3.2rc5
 
     - (Issue 153) FirePHP incorrectly double-encodes UTF8 when mbstring.func_overload is enabled
